Add style for langjs-widget-button

--- a/components/index.html
+++ b/components/index.html
@@ -97,7 +97,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><span id="langjs-widget-button"></span></li>
+        <li><span id="langjs-widget-button" style="margin-top:10px;"></span></li>
         <li><a href="http://expo.getbootstrap.com" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Expo');">Expo</a></li>
         <li><a href="http://blog.getbootstrap.com" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Blog');">Blog</a></li>
       </ul>
